# VSF-Project

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
apps/annotation-tool/tests/: __init__.py  test_label_exporter.py  test_label_store.py
apps/candidate-mining/tests/: test_anomaly.py  test_camera_anomaly.py  test_camera_movement.py  test_cli_export.py  test_config.py  test_context_marker_bar.py  test_cover_heuristic.py  test_debug_artifacts.py  test_debug_renderer.py  test_episode_segments.py  test_export_dialog.py  test_exporter.py  test_ffmpeg_frame_access.py  test_frame_access.py  test_inventory.py  test_manifest.py  test_media_tools.py  test_processed_store.py  test_processing_progress.py  test_roi.py  test_roi_candidates.py  test_roi_reference_canvas.py  test_roi_source_config.py  test_sampling.py  test_segments.py  test_tracking.py  test_video_browser.py
configs/: candidate-mining.toml
docs/: desktop-roi-workflow.md  ffmpeg-portable-windows.md  hanh-vi.md  huong-dan-gan-nhan.md  ke-hoach-3-tuan-kiem-thu-ai-camera.md  ke-hoach-candidate-mining-v1.md  metadata.md  nhom-label-canh-bao.md  yeu-cau-va-huong-dan-tool-gan-nhan.md
docs/week-1/day-16/: AI_Testing_Objectives_v0.1.md  Acceptance_Criteria_Draft_v0.1.md  Annotation_Queue_Entry_Template_v0.1.md  Assumption_and_Blocker_Log_v0.1.md  Business_Clarification_Log_v0.1.md  Camera_Stream_and_ROI_Evidence_Checklist_v0.1.md  Candidate_Mining_Pseudocode_v0.1.md  Dataset_Folder_and_Manifest_Design_v0.1.md  Disagreement_and_Adjudication_Process_v0.1.md  KPI_Calculation_Sheet_Template_v0.1.md  (+8 more)
models/: README.md
(+62 files in other folders)
