[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsf-candidate-mining"
version = "0.1.0"
description = "Local review-queue preparation pipeline for VSF camera video"
requires-python = ">=3.11"
dependencies = ["typer>=0.12,<1"]

[project.optional-dependencies]
vision = [
  "numpy>=1.26,<3",
  "opencv-python>=4.10,<5",
  "ultralytics>=8.3,<9",
]
gui = ["PySide6>=6.8,<7"]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<7",
  "pytest-qt>=4.4,<5",
  "ruff>=0.6,<1",
]

[project.scripts]
candidate-mining = "candidate_mining.cli:app"
candidate-mining-gui = "candidate_mining.gui.app:main"
annotation-tool-gui = "annotation_tool.gui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["apps/candidate-mining/src/candidate_mining", "apps/annotation-tool/src/annotation_tool"]

[tool.pytest.ini_options]
testpaths = ["apps/candidate-mining/tests", "apps/annotation-tool/tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
